<resources>

    <!-- TODO: Login Activity -->
    <string name="app_name">Rustar</string>
    <string name="LOG_IN">LOG IN</string>
    <string name="action_settings">Settings</string>
    <string name="exit">Are you sure want to exit?</string>
    <string name="Yes">Yes</string>
    <string name="No">No</string>
    <string name="incorrect_password_title">Incorrect Password or Username</string>
    <string name="incorrect_password_text">The password or username you entered is incorrect. Please try again.</string>
    <string name="Ok">OK</string>
    <string name="no_internet_connection_text_title">Login Failed</string>
    <string name="no_internet_connection_text">Sorry, unable to login to Rustar. Please check your network connection or try again later.</string>
    <string name="title_activity_first_page">FirstPageActivity</string>
    <string name="title_activity_firstpage">FirstpageActivity</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="wait">wait...</string>
    <string name="log_out">log out</string>
    <string name="rustar_online_title">Rustar Online</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="help">help</string>

    <!-- TODO: First Page Activity  -->

    <string name="when">When</string>
    <string name="checkIn">CHECK IN</string>
    <string name="nights">NIGHTS</string>
    <string name="checkOut">CHECK OUT</string>
    <string name="where">Where</string>
    <string name="location">LOCATION</string>
    <string name="hotel">HOTEL</string>
    <string name="who">Who</string>
    <string name="Pax">PAX</string>
    <string name="signIn">SIGN IN</string>
    <string name="search">SEARCH NOW</string>

    <!-- TODO: Search Activity -->

    <string name="City">CITY</string>
    <string name="District">DISTRICT</string>
    <string name="Adults">ADULTS</string>
    <string name="Children">CHILDREN</string>
    <string name="daily_from">DAILY FROM</string>
    <string name="daily_to">DAILY TO</string>
    <string name="total_from">TOTAL FROM</string>
    <string name="total_to">TOTAL TO</string>
    <string name="Type">TYPE</string>
    <string name="Meal">MEAL</string>
    <string name="Age">AGE</string>
    <string name="apartment">Apartment</string>
    <string name="alcohol">Alcohol</string>
    <string name="free_WIFI">Free WIFI</string>
    <string name="metro">Metro</string>
    <string name="pool">Pool</string>
    <string name="mall">Mall</string>
    <string name="age_text">Age of each children</string>


    <!-- TODO: Search result -->

    <string name="HotelName">Hotel name:</string>
    <string name="PricePerNight">Price per night:</string>
    <string name="TotalPrice">Total price:</string>
    <string name="CheckInDate">Check in date:</string>
    <string name="CheckOutDate">Check out date:</string>
    <string name="HotelClass">Hotel class:</string>
    <string name="Dollar">$</string>
    <string name="Star">Star</string>
    <string name="Stars">Stars</string>
    <string name="Details">Details...</string>
    <string name="Total">TOTAL</string>
    <string name="Availability_calendar">Availability calendar</string>
    <string name="StandardRoom">Standard Room</string>
    <string name="Monday">Monday</string>
    <string name="Tuesday">Tuesday</string>
    <string name="Wednesday">Wednesday</string>
    <string name="Thursday">Thursday</string>
    <string name="Friday">Friday</string>
    <string name="Saturday">Saturday</string>
    <string name="Sunday">Sunday</string>
    <string name="Book">Book</string>
    <string name="meal">Meal:</string>
    <string name="bestHotels">Best hotels</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="title_activity_advanced_search">AdvancedSearchActivity</string>


    <!-- TODO: Spinner items!! -->
    <string-array name="OneTillTen">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>

    <string-array name="OneTillSix">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
    </string-array>

    <string-array name="types">
        <item>All types</item>
        <item>City Hotel</item>
        <item>Beach Hotel</item>
    </string-array>

    <string-array name="meals">
        <item>Any</item>
        <item>RO</item>
        <item>BB</item>
        <item>HB</item>
        <item>FB</item>
        <item>AL</item>
    </string-array>

    <string-array name="ages">
        <item>Age</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
    </string-array>

    <string name="title_activity_details">DetailsActivity</string>
    <string name="title_activity_you_tube">YouTube</string>
    <string name="title_activity_video_player">VideoPlayer</string>
</resources>